# AnotherMC

./: .gitignore  CMakeLists.txt  README.MD
assets/shaders/: fragment.glsl  vertex.glsl
cmake/: vcpkg.cmake
dependencies/proto/: CMakeLists.txt
dependencies/proto/src/: c2s_move.proto  chunk_position.proto  entity_data.proto  look.proto  s2c_disconnect.proto  s2c_load_chunk.proto  s2c_spawn.proto  s2c_unload_chunk.proto  vector3.proto
src/: game.cpp  game.h  main.cpp
src/assets/: textures.cpp  textures.h
src/client/: client.cpp  client.h
src/client/model/: full_block.cpp  full_block.h
src/client/objects/: block_faces.h
src/client/render/: gl_camera.cpp  gl_camera.h  gl_render_engine.cpp  gl_render_engine.h  gl_shader_program.cpp  gl_shader_program.h  gl_vao.h  gl_window.cpp  gl_window.h  tex_atlas.cpp  tex_atlas.h
src/client/world/: chunk.cpp  chunk.h  chunk_renderer.cpp  chunk_renderer.h
src/glm/: vec2_add.hpp
src/math/: block_pos.cpp  block_pos.h  chunk_pos.cpp  chunk_pos.h  vector2.h
src/network/: packet_id.h  transfer_context.cpp  transfer_context.h
src/network/client/: client_session.cpp  client_session.h
src/network/server/: server.cpp  server.h  server_session.cpp  server_session.h
src/objects/: block_faces.h
src/registry/: registries.cpp  registries.h  registry.cpp  registry.h
src/registry/registries/: block_registry.cpp  entity_registry.cpp
src/render/: gl_ebo.cpp  gl_ebo.h  gl_render_engine.cpp  gl_render_engine.h  gl_ubo.cpp  gl_ubo.h  gl_vao.cpp  gl_vao.h  gl_vbo.cpp  gl_vbo.h  gl_window.cpp  gl_window.h  tex_atlas.h
src/server/: server.cpp  server.h  server_player.cpp  server_player.h  server_world.cpp  server_world.h
src/util/: bstream.h  class_operations.h  entity.cpp  entity.h  type_traits_n.h
src/world/: block.cpp  block.h  block_model.cpp  block_model.h  chunk.cpp  chunk.h  world.cpp  world.h
src/world/block/: simple_block.cpp  simple_block.h
src/world/entity/: entity.cpp  entity.h  living_entity.cpp  living_entity.h  player.cpp  player.h
